--- a/wireguard/Dockerfile
+++ b/wireguard/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:latest-slim
+FROM debian:latest
 
 RUN apt-get update && \
     apt-get install -y wireguard-tools iproute2 qrencode && \
