--- a/wireguard/compose.yaml
+++ b/wireguard/compose.yaml
@@ -10,6 +10,12 @@ services:
     secrets:
       - client_public_key
     restart: unless-stopped
+    cap_add:
+      - NET_ADMIN
+      - SYS_MODULE
+    sysctls:
+      - net.ipv4.ip_forward=1
+      - net.ipv6.conf.all.forwarding=1
 
 secrets:
   client_public_key:
