--- a/wireguard/compose.yaml
+++ b/wireguard/compose.yaml
@@ -15,6 +15,7 @@ services:
     sysctls:
       - net.ipv4.ip_forward=1
       - net.ipv6.conf.all.forwarding=1
+    privileged: true
 
 secrets:
   client_public_key:
