--- a/wireguard/compose.yaml
+++ b/wireguard/compose.yaml
@@ -16,6 +16,8 @@ services:
       - net.ipv4.ip_forward=1
       - net.ipv6.conf.all.forwarding=1
     privileged: true
+    secrets:
+      - client_public_key
 
 secrets:
   client_public_key:
