--- a/wireguard/compose.yaml
+++ b/wireguard/compose.yaml
@@ -1,11 +1,11 @@
 services:
   wireguard:
     build: .
-    network_mode: "host"
+    # network_mode: "host"
     environment:
       SERVER_PORT: 51820
-    #ports:
-    #  - "51820:51820/udp"
+    ports:
+     - "51820:51820/udp"
     volumes:
       - ./config:/etc/wireguard
     secrets:
@@ -14,9 +14,9 @@ services:
     cap_add:
       - NET_ADMIN
       - SYS_MODULE
-    #sysctls:
-    #  - net.ipv4.ip_forward=1
-    #  - net.ipv6.conf.all.forwarding=1
+    sysctls:
+     - net.ipv4.ip_forward=1
+     - net.ipv6.conf.all.forwarding=1
     privileged: true
 
 secrets:
