--- a/wireguard/compose.yaml
+++ b/wireguard/compose.yaml
@@ -2,9 +2,9 @@ services:
   wireguard:
     build: .
     environment:
-      - CLIENT_KEY: "cB8lMXbSZbYzVMvRYvZ7nlQJ6SagUd33egI6FS/gMHI="
-      - KEY_PRIVATE:
-      - KEY_PUBLIC:
+      - CLIENT_KEY='cB8lMXbSZbYzVMvRYvZ7nlQJ6SagUd33egI6FS/gMHI='
+      #  - KEY_PRIVATE=
+      #  - KEY_PUBLIC=
     ports:
      - "51820:51820/udp"
     volumes:
