--- a/wireguard/compose.yaml
+++ b/wireguard/compose.yaml
@@ -4,7 +4,7 @@ services:
     build: .
     network_mode: "host"
     environment:
-      - CLIENT_KEY=cB8lMXbSZbYzVMvRYvZ7nlQJ6SagUd33egI6FS/gMHI=
+      - CLIENT_KEY=
       #  - KEY_PRIVATE=
       #  - KEY_PUBLIC=
     #ports:
