--- a/wireguard/compose.yaml
+++ b/wireguard/compose.yaml
@@ -4,7 +4,7 @@ services:
     build: .
     network_mode: "host"
     env_file:
-      - path: ./env
+      - .env
     #ports:
     # - "51820:51820/udp"
     volumes:
