--- a/duckdns/Dockerfile
+++ b/duckdns/Dockerfile
@@ -5,7 +5,8 @@ RUN apt-get update -y && \
     apt-get clean && \
     rm -rf /var/lib/apt/list/*
 
+
 COPY server.sh /usr/local/bin/server.sh
-RUN chmod +x /user/local/bin/server.sh
+RUN chmod +x /usr/local/bin/server.sh
 
 ENTRYPOINT ["/usr/local/bin/server.sh"]
