--- a/java-mine/compose.yaml
+++ b/java-mine/compose.yaml
@@ -8,10 +8,47 @@ services:
       PAPERMC_FLAGS: ""
     volumes:
       - ./minecraftserver:/data
-    ports:
-      - "25565:25565"
+    # ports:
+      # - "25565:25565"
     # The following allow `docker attach minecraft` to work
     stdin_open: true
     tty: true
-volumes:
-  minecraftserver:
+    networks:
+      - wireguard_network
+
+
+  server-wireguard:
+    image: lscr.io/linuxserver/wireguard:latest
+    container_name: wireguard
+    cap_add:
+      - NET_ADMIN
+      - SYS_MODULE #optional
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+      - SERVERURL=wireguard.domain.com #optional
+      - SERVERPORT=51820 #optional
+      - PEERS=1 #optional
+      - PEERDNS=auto #optional
+      - INTERNAL_SUBNET=10.13.13.0 #optional
+      - ALLOWEDIPS=0.0.0.0/0 #optional
+      - PERSISTENTKEEPALIVE_PEERS=25 #optional
+      - LOG_CONFS=true #optional
+    volumes:
+      - .config:/config
+    ports:
+      - 51820:51820/udp
+    sysctls:
+      - net.ipv4.conf.all.src_valid_mark=1
+    restart: unless-stopped
+    networks:
+      - wireguard_network
+
+networks:
+  wireguard_network:
+    driver: bridge
+
+
+
+    
