--- a/java-mine/compose.yaml
+++ b/java-mine/compose.yaml
@@ -1,54 +1,20 @@
 services:
   minecraft:
-    image: marctv/minecraft-papermc-server:latest
+    image: itzg/minecraft-server
     restart: always
     container_name: "mcserver"
     environment:
-      MEMORYSIZE: "1G"
-      PAPERMC_FLAGS: ""
+      TYPE: "PAPER"
+      EULA: "TRUE"
+      MOTD: "                \u00A75\u00A7n\u00A7lCHAOS YIPPE!11!!\u00A7r\n           \u00A74nether is disable for now."
+      SERVER_NAME: "Mayhem"
+      PLUGINS: |
+        https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest/downloads/spigot
+        https://download.geysermc.org/v2/projects/floodgate/versions/latest/builds/latest/downloads/spigot
     volumes:
       - ./minecraftserver:/data
-    # ports:
-      # - "25565:25565"
-    # The following allow `docker attach minecraft` to work
+    ports:
+      - 25565:25565/tcp
+      - 19132:19132/udp
     stdin_open: true
     tty: true
-    networks:
-      - wireguard_network
-
-
-  server-wireguard:
-    image: lscr.io/linuxserver/wireguard:latest
-    container_name: wireguard
-    cap_add:
-      - NET_ADMIN
-      - SYS_MODULE #optional
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Etc/UTC
-      - SERVERURL=wireguard.domain.com #optional
-      - SERVERPORT=51820 #optional
-      - PEERS=1 #optional
-      - PEERDNS=auto #optional
-      - INTERNAL_SUBNET=10.13.13.0 #optional
-      - ALLOWEDIPS=0.0.0.0/0 #optional
-      - PERSISTENTKEEPALIVE_PEERS=25 #optional
-      - LOG_CONFS=true #optional
-    volumes:
-      - .config:/config
-    ports:
-      - 51820:51820/udp
-    sysctls:
-      - net.ipv4.conf.all.src_valid_mark=1
-    restart: unless-stopped
-    networks:
-      - wireguard_network
-
-networks:
-  wireguard_network:
-    driver: bridge
-
-
-
-    
