--- a/java-mine/compose.yaml
+++ b/java-mine/compose.yaml
@@ -6,8 +6,14 @@ services:
     environment:
       TYPE: "PAPER"
       EULA: "TRUE"
-      MOTD: "                \u00A75\u00A7n\u00A7lCHAOS YIPPE!11!!\u00A7r\n           \u00A74nether is disable for now."
+      MOTD: "                \u00A75\u00A7n\u00A7lCHAOS YIPPE!11!!\u00A7r\n           \u00A74nether is disabled for now."
       SERVER_NAME: "Mayhem"
+      DIFFICULTY: "hard"
+      MAX_PLAYERS: "30"
+      ALLOW_NETHER: false
+      ENABLE_COMMAND_BLOCK: true
+      VIEW_DISTANCE: "10"
+      SIMULATION_DISTANCE: "10"
       PLUGINS: |
         https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest/downloads/spigot
         https://download.geysermc.org/v2/projects/floodgate/versions/latest/builds/latest/downloads/spigot
