--- a/compose.yaml
+++ b/compose.yaml
@@ -8,11 +8,13 @@ services:
       EULA: "TRUE"
       MOTD: "                \u00A75\u00A7n\u00A7lCHAOS YIPPE!11!!\u00A7r\n           \u00A74nether is disabled for now."
       SERVER_NAME: "Mayhem"
+      INIT_MEMORY: "2G"
+      MAX_MEMORY: "2G"
       DIFFICULTY: "hard"
       MAX_PLAYERS: "30"
       ALLOW_NETHER: "false"
       ENABLE_COMMAND_BLOCK: "true"
-      VIEW_DISTANCE: "15"
+      VIEW_DISTANCE: "10"
       SIMULATION_DISTANCE: "10"
       PLUGINS: |
         https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest/downloads/spigot
