--- a/compose.yaml
+++ b/compose.yaml
@@ -20,20 +20,13 @@ services:
         https://hangarcdn.papermc.io/plugins/Artillex-Studios/AxGraves/versions/1.17.0/PAPER/AxGraves-1.17.0.jar
         https://hangarcdn.papermc.io/plugins/ViaVersion/ViaVersion/versions/5.2.0/PAPER/ViaVersion-5.2.0.jar
         https://hangarcdn.papermc.io/plugins/pop4959/Chunky/versions/1.4.28/PAPER/Chunky-Bukkit-1.4.28.jar
-        https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest/downloads/spigot
-        https://download.geysermc.org/v2/projects/floodgate/versions/latest/builds/latest/downloads/spigot
+        # https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest/downloads/spigot
+        # https://download.geysermc.org/v2/projects/floodgate/versions/latest/builds/latest/downloads/spigot
         https://github.com/TCPShield/RealIP/releases/download/2.8.1/TCPShield-2.8.1.jar
     volumes:
       - ./minecraftserver:/data
     ports:
       - 25565:25565/tcp
-      - 19132:19132/udp
+      # - 19132:19132/udp
     stdin_open: true
     tty: true
-
-
-  playit:
-    image: ghcr.io/playit-cloud/playit-agent:0.15
-    network_mode: host
-    environment:
-    - SECRET_KEY=a7a6572d35462e33ac7306cc269a54bfa9ef3f01b893462d6ca6a62a23051aa7
