--- a/compose.yaml
+++ b/compose.yaml
@@ -7,13 +7,13 @@ services:
       ICON: "https://imgs.search.brave.com/mxWP6CeRreTSaxF4ToqAA0b8DKIdFYvcyJBNgQ-71oQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90My5m/dGNkbi5uZXQvanBn/LzA1LzcxLzQxLzc2/LzM2MF9GXzU3MTQx/NzYwMV9NTktYZUkx/TFVrT3RqOEZoRTJF/djVsc0dIUEtZa21w/di5qcGc"
       TYPE: "PAPER"
       EULA: "TRUE"
-      MOTD: "                \u00A75\u00A7n\u00A7lCHAOS YIPPE!11!!\u00A7r\n           \u00A74nether is disabled for now."
+      MOTD: "                \u00A75\u00A7n\u00A7lCHAOS YIPPE!11!!\u00A7r\n           \u00A74nether is not disabled now."
       SERVER_NAME: "Mayhem"
       INIT_MEMORY: "2G"
       MAX_MEMORY: "2G"
       DIFFICULTY: "hard"
       MAX_PLAYERS: "30"
-      ALLOW_NETHER: "false"
+      ALLOW_NETHER: "true"
       ENABLE_COMMAND_BLOCK: "true"
       VIEW_DISTANCE: "15"
       SIMULATION_DISTANCE: "10"
